--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "php": ">=8.1",
     "aws/aws-sdk-php": "^3.300",
     "php-amqplib/php-amqplib": "^3.7",
-    "nette/di": "^4.0",
+    "nette/di": "^v3.2.5",
     "nette/utils": "^4.0",
     "doctrine/orm": "^2.20"
   }
